--- a/django_backend/requirements.txt
+++ b/django_backend/requirements.txt
@@ -16,4 +16,4 @@ django-ninja-extra==0.30.2
 django-ninja-jwt==5.4.0
 django-ninja-simple-jwt==0.6.1
 django-cors-headers==4.3.1
-python-3.12.2
+python==3.12.2
